After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790799 - Scroll position lost and review expander unexpanded after rating reviews
Scroll position lost and review expander unexpanded after rating reviews
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: Ratings and Reviews
3.26.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-11-24 18:36 UTC by Michael Catanzaro
Modified: 2017-12-05 11:03 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Michael Catanzaro 2017-11-24 18:36:22 UTC
After rating a review by clicking one of the "Was this review useful to you? Yes | No" buttons, GNOME Software resets the scroll position to the top of the page, which is very jarring. One has to scroll down to return to the previous position to continue reading and rating reviews. Additionally, the "Show More" expander button is unexpanded and has to be pressed again each time.
Comment 1 Michael Catanzaro 2017-11-24 18:36:35 UTC
Version 3.26.2
Comment 2 Richard Hughes 2017-12-05 11:03:36 UTC
commit 2452ca68f23be39752a9020f04b38436737fe112 (HEAD -> master)
Author: Richard Hughes <richard@hughsie.com>
Date:   Tue Dec 5 10:58:23 2017 +0000

    Don't require the user to keep clicking 'More reviews' after each click
    
    Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=790799

:100644 100644 d13932b7... 724cab6e... M        src/gs-details-page.c