Don't require the user to keep clicking 'More reviews' after each click

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=790799